# TimeRacker

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
