[package]
name = "timeracker_cli"
version = "0.1.0"
authors = ["liothique <liothique@liothique.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4.0", features = ["full", "codec"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.0"
timeracker_core = {path = "../core/"}
clap = "3.0.0-beta.2"
directories = "3.0"
rust-ini = "0.15"