[package]
name = "timeracker_core"
version = "0.1.0"
authors = ["liothique <liothique@liothique.xyz>"]
edition = "2018"


[lib]
name = "timeracker_common"
path = "src/lib.rs"

[[bin]]
name = "timeracker_core"
path = "src/main.rs"


[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4.0", features = ["full", "codec"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.0"
